--- a/style.css
+++ b/style.css
@@ -174,15 +174,6 @@ body {
     flex-direction: column;
 }
 
-.visualizer {
-    width: 100%;
-    height: 70%;
-    background-color: var(--dark-gray);
-
-    border-top: 1px groove gray;
-    border-left: 1px groove gray;
-    border-right: 1px groove gray;
-}
 
 .console-log {
     width: 100%;
@@ -198,6 +189,7 @@ body {
     margin: 6px;
     margin-left: 14px;
 }
+
 
 .code {
     width: 30vw;
@@ -215,3 +207,33 @@ body {
 .code pre {
     white-space: pre-wrap;
 } 
+
+
+.visualizer {
+    width: 100%;
+    height: 70%;
+    background-color: var(--dark-gray);
+
+    border-top: 1px groove gray;
+    border-left: 1px groove gray;
+    border-right: 1px groove gray;
+
+    display: flex;
+}
+
+.visual-container {
+    flex: 1 1;
+    align-self: stretch;
+}
+.node-circle {
+    fill: none; 
+    stroke: var(--text); 
+    stroke-width: 1;
+}
+.node-text {
+    fill: var(--text);
+    font-size: 12px;
+    dominant-baseline: central; 
+    text-anchor: middle;
+    user-select: none;
+}
